# 4.2-students-tournament

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  package.json  vite.config.ts
.github/workflows/: release.yml  test.yml  virustotal.py  virustotal.yml
contrib/: config.guess
pseudo/: index.txt  structure.json
public/: index.py
src/: index.tsx  keybinds.ts  main.rs  scoring.ts  state.rs  store.ts  types.d.ts  vite-env.d.ts  window.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/store/: events.rs  mod.rs  teams.rs
src-tauri/src/store/events/: api.rs  ipc.rs  mod.rs
src-tauri/src/store/individuals/: api.rs  ipc.rs  mod.rs
src-tauri/src/store/reports/: api.rs  ipc.rs  mod.rs
src-tauri/src/store/results/: api.rs  ipc.rs  mod.rs
src-tauri/src/store/teams/: api.rs  ipc.rs  mod.rs
src/components/: App.tsx  EventsSelector.tsx  HeaderBar.tsx  LoadingThrobber.tsx  Sidebar.tsx  hello_world_button.rs  mod.rs
src/components/icons/: Add.tsx  AddPerson.tsx  Back.tsx  Check.tsx  ChevronDown.tsx  Close.tsx  PDF.tsx  People.tsx  Person.tsx  XLSX.tsx
src/modals/events/: create.tsx
src/pseudo/: index.txt
src/resources/: resources.gresource.xml  window.ui
src/screens/: index.tsx
src/screens/admin/: dashboard.tsx  events.tsx  index.tsx  individuals.tsx  teams.tsx
src/screens/intro/: index.tsx  whoami.tsx
src/scss/: button.scss  containers.scss  index.scss  reset.scss  typography.scss
src/scss/components/: admin.scss  final.scss  (+10 more)
src/templates/: generated.xlsx
(+12 files in other folders)
